added auth with jwt and cookie, also added skill model and services to add it

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=skill-swap
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/skill-swap
+spring.datasource.username=postgres
+spring.datasource.password=pgAdmin
+spring.jpa.hibernate.ddl-auto=update
